manifests/petclinic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: default
spec:
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
        - name: petclinic
          image: quay.io/sololabs/petclinic:v3
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  namespace: default
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: petclinic
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: petclinic-db
  namespace: default
  labels:
    app: petclinic-db
spec:
  selector:
    matchLabels:
      app: petclinic-db
  serviceName: petclinic-db
  template:
    metadata:
      labels:
        app: petclinic-db
    spec:
      containers:
        - name: petclinic-db
          image: quay.io/sololabs/petclinic-db:v3
          ports:
            - containerPort: 3306
              protocol: TCP
              name: mysql
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: sql-data
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 250m
              memory: 512Mi
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - "mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}"
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - "mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}"
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: sql-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic-db
  namespace: default
spec:
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: petclinic-db
  type: ClusterIP
