manifests/gateway-gateway-proxy.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  labels:
    app: gloo
  name: gateway-proxy
  namespace: gloo-system
spec:
  bindAddress: '::'
  bindPort: 8080
  httpGateway:
    options:
      healthCheck:
        path: /check/healthz
      httpConnectionManagerSettings:
        useRemoteAddress: true
  options:
    accessLoggingService:
      accessLog:
      - fileSink:
          jsonFormat:
            duration: '%DURATION%'
            dynamicMetadata: '%DYNAMIC_METADATA("io.solo.filters.http.modsecurity:audit_log")%'
            endpoint_url: '%DYNAMIC_METADATA(io.solo.transformation:endpoint_url)%'
            filterState: '%FILTER_STATE(io.solo.modsecurity.audit_log)%'
            method: '%REQ(:METHOD)%'
            path: '%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%'
            pod_name: '%DYNAMIC_METADATA(io.solo.transformation:pod_name)%'
            protocol: '%PROTOCOL%'
            clientDuration: '%DURATION%'
            targetDuration: '%RESPONSE_DURATION%'
            remoteAddress: '%DOWNSTREAM_REMOTE_ADDRESS%'
            responseCode: '%RESPONSE_CODE%'
            stringFormat: "%FILTER_STATE(io.solo.modsecurity.audit_log)%\n"
            systemTime: '%START_TIME%'
            upstreamCluster: '%UPSTREAM_CLUSTER%'
            upstreamHost: '%UPSTREAM_HOST%'
            xForwardFor: '%REQ(X-FORWARDED-FOR)%'
          path: /dev/stdout
  proxyNames:
  - gateway-proxy
  ssl: false
  useProxyProto: false
