manifests/grpc-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: grpc
  namespace: gloo-system
spec:
  virtualHost:
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-grpcstore-demo-80
            namespace: gloo-system
      options:
        timeout: '20s'
        retries:
          retryOn: 'connect-failure'
          numRetries: 3
          perTryTimeout: '5s'
