manifests/httpbin-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: httpbin
  namespace: gloo-system
spec:
  displayName: httpbin
  virtualHost:
    domains:
      - 'httpbin'
    routes:
      - matchers:
        - prefix: /
        routeAction:
          single:
            upstream:
              name: default-httpbin-8000
              namespace: gloo-system
    #options:
      # idleTimeout: '10s'
      # timeout: '10s'
      # grpcTimeoutOffset: '10s'
      # maxGrpcTimeout: '10s'
      # csrf:
      #   filterEnabled:
      #     defaultValue:
      #       numerator: 100
      #       denominator: HUNDRED
